sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value iMin
    iMin=j
    ^AlgInsertionSort:8: error: not found: value j
    for (i <- j+1 to lgr){
              ^AlgInsertionSort:9: error: not found: value a
      if(a[i] < a[iMin]){
         ^AlgInsertionSort:9: error: not found: type i
      if(a[i] < a[iMin]){
           ^AlgInsertionSort:9: error: not found: value a
      if(a[i] < a[iMin]){
                ^AlgInsertionSort:9: error: not found: type iMin
      if(a[i] < a[iMin]){
                  ^AlgInsertionSort:10: error: not found: value iMin
        iMin=i
        ^AlgInsertionSort:13: error: not found: value iMin
    if (iMin!=j){
        ^AlgInsertionSort:13: error: not found: value j
    if (iMin!=j){
              ^AlgInsertionSort:14: error: not found: value a
      echange(a[j],a[iMin])
              ^AlgInsertionSort:14: error: not found: type j
      echange(a[j],a[iMin])
                ^AlgInsertionSort:14: error: not found: value a
      echange(a[j],a[iMin])
                   ^AlgInsertionSort:14: error: not found: type iMin
      echange(a[j],a[iMin])
                     ^